--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -85,12 +85,12 @@
    "metadata": {},
    "source": [
     "## NodeCluster \n",
-    "> The class has all the methods to create and visualize a cluster "
+    "The class has all the methods to create and visualize a cluster. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +868,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.NodeCluster at 0x7f6ff4c4bc90>"
+       "<__main__.NodeCluster at 0x7fa91ee20dd0>"
       ]
      },
      "execution_count": 7,
@@ -1040,17 +1040,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.polygon_not_intersec_children\" class=\"doc_header\"><code>NodeCluster.polygon_not_intersec_children</code><a href=\"__main__.py#L685\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.polygon_not_intersec_children\" class=\"doc_header\"><code>NodeCluster.polygon_not_intersec_children</code><a href=\"__main__.py#L686\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.polygon_not_intersec_children</code>(**\\*\\*`kwargs`**)\n",
        "\n",
-       "Returns a polygon that doesn't touch the any of children polyon's and \n",
+       "Returns a polygon that doesn't touch the any of children polygon's and \n",
        "it is inside the cluter's polygon \n",
        "\n",
        "\n",
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1280,13 +1280,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"NodeCluster.viewer_cluster\" class=\"doc_header\"><code>NodeCluster.viewer_cluster</code><a href=\"__main__.py#L479\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"NodeCluster.viewer_cluster\" class=\"doc_header\"><code>NodeCluster.viewer_cluster</code><a href=\"__main__.py#L480\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
        "> <code>NodeCluster.viewer_cluster</code>(**`ax`**, **\\*\\*`kwargs`**)\n",
        "\n",
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1871,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2054,21 +2054,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Helper functions\n",
-    "> Functions to help build the nodes "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## inside_polygon\n",
-    "Check if a min percentage of point are inside a polygon"
+    "## Helper functions\n",
+    "\n",
+    "Functions to help build the nodes and trees  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2098,16 +2091,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## poligon_non_convex_from_Points\n",
-    "Function create a polygon from a list of points"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2136,16 +2121,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## poligon_non_convex_random_gen\n",
-    "Creates a poligon from a random number of points "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
