--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -868,7 +868,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.NodeCluster at 0x7fa91ee20dd0>"
+       "<__main__.NodeCluster at 0x7f6b8dfb9b10>"
       ]
      },
      "execution_count": 7,
