--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4363959e-b31e-4325-9f9f-8d60ccbc4ee0",
    "metadata": {},
    "outputs": [],
@@ -45,14 +45,14 @@
    "source": [
     "# Clustering \n",
     "\n",
-    "In this module all the clustering methods wrap or implemented (Natural cities DBSCAN, OPTICS, HDBSCAN, auto_DBSCAN) all with the intention to have the same input and output. \n",
+    "In this module all the clustering methods wrap or implemented (Natural cities, DBSCAN, OPTICS, HDBSCAN, and adap_DBSCAN) all with the intention to have the same input and output. \n",
     "\n",
     "A recursive function is implemented to obtain the cluster iterative using the output as the new input. To select the method to use only a string is needed.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3fadca08-8cee-4a27-9be1-ae519358afe0",
    "metadata": {},
    "outputs": [],
@@ -121,10 +121,10 @@
     "                        noise_points = tmp[1]\n",
     "                        tmp =  tmp[0]\n",
     "                ##########  \n",
-    "                elif algorithm == 'auto_knee_average':\n",
+    "                elif algorithm == 'adaptative_DBSCAN':\n",
     "                    #### If the number of cluster is too small \n",
     "                    \n",
-    "                    tmp = auto_knee_average(cluster, **kwargs)\n",
+    "                    tmp = adaptative_DBSCAN(cluster, **kwargs)\n",
     "                    if ret_noise:\n",
     "                        noise_points = tmp[1]\n",
     "                        tmp =  tmp[0]\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e0b7a559-9d82-4dcc-bd65-0719025bbaba",
    "metadata": {},
    "outputs": [],
@@ -191,26 +191,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2ceb807e-6bd7-47f7-904d-ba6448872f16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"clustering\" class=\"doc_header\"><code>clustering</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>clustering</code>(**`t_next_level_2`**, **`level`**=*`None`*, **`algorithm`**=*`'dbscan'`*, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "Function to get the clusters for single group by\n",
+       "\n",
+       ":param t_next_level_2 Dictionary with the points to compute the\n",
+       "        cluster\n",
+       ":param level:  None Level to compute (Default None)\n",
+       "\n",
+       ":param str algorithm : Algorithm type is supported (Default= 'dbscan')\n",
+       "\n",
+       ":param int min_points_cluster:  minimun number of point to consider a cluster(Default 50)\n",
+       "\n",
+       ":param double eps: Epsilon parameter In case is needed\n",
+       "\n",
+       ":param bool return_noise: To return the noise (Default False)\n",
+       "\n",
+       ":param bool verbose: Printing (Dafault False)  \n",
+       "\n",
+       ":returns list t_next_level_n: A list with dictionaries with the points, the parent, and nois "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "show_doc(clustering)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "496cec4e-124d-4a83-a7ad-8a50f7dc5646",
-   "metadata": {},
-   "source": [
-    "## Recursive Clustering \n",
-    "The function obtains the clustering iterative"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7fadc0e6-da7b-4d25-9099-d45d05659d46",
    "metadata": {},
    "outputs": [],
@@ -297,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "372eacfa-9a9f-4485-bcfb-95710f57cf84",
    "metadata": {},
    "outputs": [],
@@ -308,10 +332,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f5e05b61-f672-4d5f-b085-439d0694490d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"recursive_clustering\" class=\"doc_header\"><code>recursive_clustering</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>recursive_clustering</code>(**`this_level`**, **`to_process`**, **`cluster_tree`**, **`level`**=*`0`*, **`algorithm`**=*`'dbscan'`*, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "Performs the recursive clustering.\n",
+       "Calls compute_dbscan for each\n",
+       "list of clusters keepen the structure and then calls itself\n",
+       "until no more clusters satisfy the condition\n",
+       "    \n",
+       ":param dict this_level: level is the current level \n",
+       "\n",
+       ":param int to_process: the max level to process\n",
+       "\n",
+       ":param double eps: The epsilon parameter distance to pass to the needed algorithm \n",
+       "\n",
+       ":param list cluster_tree : list of list to insert the levels \n",
+       "\n",
+       ":param bool verbose : To print \n",
+       "\n",
+       ":param double decay: In the use of dbscan the deacy parameter to reduce eps\n",
+       "\n",
+       ":param int min_points_cluster: The min point for each cluster to pass to algorithm\n",
+       "\n",
+       ":param str algorithm:  The string of the algorithm name to use"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "show_doc(recursive_clustering)"
    ]
@@ -321,13 +381,13 @@
    "id": "215b9b2a-9ced-4043-87bd-950235e99ed6",
    "metadata": {},
    "source": [
-    "## Compute DBSCAN\n",
-    "A wapper function to obtain the DBSCAN cluters by levels"
+    "## Clustering Algorithms\n",
+    "A wapper functions to obtain the clusterizations "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3646c9cf-05c5-4d02-a3db-030b3834ba66",
    "metadata": {},
    "outputs": [],
@@ -383,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "aa88e40b-6f7a-480a-a346-25146d817c38",
    "metadata": {},
    "outputs": [],
@@ -394,23 +454,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b71a439b-dcb8-45da-9e27-aa9374dca393",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"compute_dbscan\" class=\"doc_header\"><code>compute_dbscan</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>compute_dbscan</code>(**`cluster`**, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "Sklearn DBSCAN wrapper.\n",
+       "\n",
+       ":param cluster: a (N,2) numpy array containing the obsevations\n",
+       "\n",
+       ":returns list with numpy arrays for all the clusters obtained"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "show_doc(compute_dbscan)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d1e2e2cc-3ead-46df-913d-81b233979560",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
-    "def auto_knee_average(points2_clusters ,\n",
+    "def adap_DBSCAN(points2_clusters ,\n",
     "                **kwargs):\n",
     "    \"\"\"\n",
     "    The function use the knee and average to obtain a good value for epsilon and use \n",
@@ -536,7 +617,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "id": "100a16d3-40bc-4587-ba39-35a2305fceff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"adap_DBSCAN\" class=\"doc_header\"><code>adap_DBSCAN</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>adap_DBSCAN</code>(**`points2_clusters`**, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "The function use the knee and average to obtain a good value for epsilon and use \n",
+       "DBSCAN to obtain the clusters\n",
+       "\n",
+       ":param list Points points2_clusters: Point to clusterize  \n",
+       "\n",
+       ":param int max_k: = (Default = len(points2_clusters)*.1)\n",
+       "\n",
+       ":param int  min_k: (Default =50)\n",
+       "\n",
+       ":param int step_k: (Default = 50)\n",
+       "\n",
+       ":param int leaf_size: (Default = 50)\n",
+       "\n",
+       ":param bool scale_points: (Default = True)\n",
+       "\n",
+       ":param bool debugg: (Default = False)\n",
+       "\n",
+       ":param bool ret_noise:  (Default = True)\n",
+       "\n",
+       ":returns list : list of cluster. If ret_noise = True return tuple list of cluter and noise "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(adap_DBSCAN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "408c167d-92a4-4220-9c06-14e536b6dd32",
    "metadata": {},
    "outputs": [],
@@ -592,7 +719,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "f8517503-4f13-4b67-9970-3f49c058d540",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"adap_DBSCAN\" class=\"doc_header\"><code>adap_DBSCAN</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>adap_DBSCAN</code>(**`points2_clusters`**, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "The function use the knee and average to obtain a good value for epsilon and use \n",
+       "DBSCAN to obtain the clusters\n",
+       "\n",
+       ":param list Points points2_clusters: Point to clusterize  \n",
+       "\n",
+       ":param int max_k: = (Default = len(points2_clusters)*.1)\n",
+       "\n",
+       ":param int  min_k: (Default =50)\n",
+       "\n",
+       ":param int step_k: (Default = 50)\n",
+       "\n",
+       ":param int leaf_size: (Default = 50)\n",
+       "\n",
+       ":param bool scale_points: (Default = True)\n",
+       "\n",
+       ":param bool debugg: (Default = False)\n",
+       "\n",
+       ":param bool ret_noise:  (Default = True)\n",
+       "\n",
+       ":returns list : list of cluster. If ret_noise = True return tuple list of cluter and noise "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(adap_DBSCAN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "1799aca1-c7a2-48aa-8e1e-bc0d037bcaf4",
    "metadata": {},
    "outputs": [],
@@ -652,6 +825,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b680f5ea-a2fd-4321-a773-5ac8395c3bbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_doc(compute_OPTICS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "f8e9777d-c78a-446d-ac64-971ac2acdea4",
    "metadata": {},
    "outputs": [],
@@ -659,8 +842,11 @@
     "#export \n",
     "def compute_Natural_cities(points2_clusters,  **kwargs):\n",
     "    \n",
-    "    \"\"\" Natural_cities.\n",
+    "    \"\"\"\n",
+    "    Compute Natural_cities clustering\n",
+    "    \n",
     "    :param np.array points2_clusters: a (N,2) numpy array containing the obsevations\n",
+    "    \n",
     "    :returns: list with numpy arrays for all the clusters obtained\n",
     "    \"\"\"\n",
     "    ### The function is in acordance with the all the previus functions\n",
@@ -707,7 +893,7 @@
     "            clusters.append(points_ret[class_member_mask])\n",
     "        elif l == -1 and debugg == True:\n",
     "            class_member_mask = (labels_points == l)\n",
-    "            print(\"Muestras consideradas ruido: \",  sum(class_member_mask))\n",
+    "            print(\"Point conscider noise: \",  sum(class_member_mask))\n",
     "\n",
     "    if ret_noise == True:\n",
     "        class_member_mask = (labels_points == -1)\n",
@@ -715,6 +901,45 @@
     "\n",
     "    return clusters"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6c071ebd-4dba-414d-bf72-c1dd4f84566e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"compute_Natural_cities\" class=\"doc_header\"><code>compute_Natural_cities</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>compute_Natural_cities</code>(**`points2_clusters`**, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "Compute Natural_cities clustering\n",
+       "\n",
+       ":param np.array points2_clusters: a (N,2) numpy array containing the obsevations\n",
+       "\n",
+       ":returns: list with numpy arrays for all the clusters obtained"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(compute_Natural_cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed8da47d-30f6-4526-a36c-310b2d09f165",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
