--- a/src/01_Clustering.ipynb
+++ b/src/01_Clustering.ipynb
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "d1e2e2cc-3ead-46df-913d-81b233979560",
    "metadata": {},
    "outputs": [],
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "100a16d3-40bc-4587-ba39-35a2305fceff",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "408c167d-92a4-4220-9c06-14e536b6dd32",
    "metadata": {},
    "outputs": [],
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "f8517503-4f13-4b67-9970-3f49c058d540",
    "metadata": {},
    "outputs": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "1799aca1-c7a2-48aa-8e1e-bc0d037bcaf4",
    "metadata": {},
    "outputs": [],
@@ -824,17 +824,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b680f5ea-a2fd-4321-a773-5ac8395c3bbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"compute_OPTICS\" class=\"doc_header\"><code>compute_OPTICS</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>compute_OPTICS</code>(**`points2_clusters`**, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "OPTICS wrapper.\n",
+       ":param np.array cluster: a (N,2) numpy array containing the obsevations\n",
+       ":returns:  list with numpy arrays for all the clusters obtained"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "show_doc(compute_OPTICS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "f8e9777d-c78a-446d-ac64-971ac2acdea4",
    "metadata": {},
    "outputs": [],
@@ -843,7 +862,7 @@
     "def compute_Natural_cities(points2_clusters,  **kwargs):\n",
     "    \n",
     "    \"\"\"\n",
-    "    Compute Natural_cities clustering\n",
+    "    Compute Natural cities clustering\n",
     "    \n",
     "    :param np.array points2_clusters: a (N,2) numpy array containing the obsevations\n",
     "    \n",
@@ -904,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "6c071ebd-4dba-414d-bf72-c1dd4f84566e",
    "metadata": {},
    "outputs": [
@@ -915,7 +934,7 @@
        "\n",
        "> <code>compute_Natural_cities</code>(**`points2_clusters`**, **\\*\\*`kwargs`**)\n",
        "\n",
-       "Compute Natural_cities clustering\n",
+       "Compute Natural cities clustering\n",
        "\n",
        ":param np.array points2_clusters: a (N,2) numpy array containing the obsevations\n",
        "\n",
