--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -868,7 +868,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.NodeCluster at 0x7f6b8dfb9b10>"
+       "<__main__.NodeCluster at 0x7fb8e4d33e90>"
       ]
      },
      "execution_count": 7,
@@ -1123,7 +1123,7 @@
    "metadata": {},
    "source": [
     "#### Get values \n",
-    "Exctrac values from the `NodeCluster` class"
+    "Exctract values from the `NodeCluster` class"
    ]
   },
   {
@@ -1752,7 +1752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Methods\n",
+    "### Methods\n",
     "The following are the mos important methos inside the `TreeClusters` class"
    ]
   },
@@ -1760,7 +1760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Counstruct tree \n",
+    "#### Counstruct tree \n",
     "\n",
     "The tree clustes structure "
    ]
@@ -1840,7 +1840,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tree Values "
+    "#### Tree Values "
    ]
   },
   {
@@ -1938,7 +1938,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize\n"
+    "#### Visualize\n"
    ]
   },
   {
@@ -2023,34 +2023,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2061,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,7 +2048,7 @@
     "    \n",
     "    :param min_percent: Minimun percent of point to be consider inside \n",
     "    \n",
-    "    :returns bool: True If the amount of points are inside.   \n",
+    "    :returns tuple: (bool, list of point inside).   \n",
     "    \"\"\"\n",
     "    if len(list_points)< 2:\n",
     "        return False\n",
@@ -2092,13 +2064,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"inside_polygon\" class=\"doc_header\"><code>inside_polygon</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>inside_polygon</code>(**`list_points`**, **`poligon_check`**, **`min_percent`**)\n",
+       "\n",
+       "Help function to validate the number of points that are inside the polygon \n",
+       "\n",
+       ":param list list_points: List of points to concider \n",
+       "\n",
+       ":param shapely.geometry.Polygon poligon_check:   \n",
+       "\n",
+       ":param min_percent: Minimun percent of point to be consider inside \n",
+       "\n",
+       ":returns tuple: (bool, list of point inside).   "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(inside_polygon)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
     "def poligon_non_convex_from_Points( points_li ):\n",
-    "    \"\"\"Create a random (no convex) poligon from the points\n",
+    "    \"\"\"\n",
+    "    Create a random (no convex) poligon from the points\n",
     "    The algorithm returns a polygon creatated from the points, the \n",
     "    non convex part it is not always guaranteed.\n",
     "    \n",
@@ -2122,13 +2129,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"poligon_non_convex_from_Points\" class=\"doc_header\"><code>poligon_non_convex_from_Points</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>poligon_non_convex_from_Points</code>(**`points_li`**)\n",
+       "\n",
+       "Create a random (no convex) poligon from the points\n",
+       "The algorithm returns a polygon creatated from the points, the \n",
+       "non convex part it is not always guaranteed.\n",
+       "\n",
+       ":param list points_li: list of shapely.geometry.Point \n",
+       "\n",
+       ":returns shapely.grometry.Polygon: The polygon created "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(poligon_non_convex_from_Points)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export \n",
     "def poligon_non_convex_random_gen(npoints):\n",
-    "    \"\"\"Create a random (no convex) poligon from n points\n",
+    "    \"\"\"\n",
+    "    Create a random (no convex) poligon from n points\n",
     "    The algorithm returns a polygon creatated from n random 2d points the \n",
     "    non convex part it is not always guaranteed.\n",
     "    \n",
@@ -2149,6 +2189,45 @@
     "            keep_triangles.append(i)\n",
     "    return shapely.ops.cascaded_union(keep_triangles)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"poligon_non_convex_random_gen\" class=\"doc_header\"><code>poligon_non_convex_random_gen</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>poligon_non_convex_random_gen</code>(**`npoints`**)\n",
+       "\n",
+       "Create a random (no convex) poligon from n points\n",
+       "The algorithm returns a polygon creatated from n random 2d points the \n",
+       "non convex part it is not always guaranteed.\n",
+       "\n",
+       ":param int npoints: Number of point to generate the polygon \n",
+       "\n",
+       ":returns shapely.grometry.Polygon: The poligon created"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(poligon_non_convex_random_gen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
