Test added nad change location of helpers function to run

--- a/src/index.ipynb
+++ b/src/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# Hierarchical Geo Clustering \n",
     "\n",
-    "> Summary description here."
+    "> "
    ]
   },
   {
@@ -61,30 +61,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3163093/921516667.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mHier_geo_clus\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mTreeClusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mHier_geo_clus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpopulate_tree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber_per_cluster\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Partition1/Cgeo/git/HierarchicalGeoClustering/HierarchicalGeoClustering/TreeClusters.py\u001b[0m in \u001b[0;36mpopulate_tree\u001b[0;34m(self, number_per_cluster, density_init, factor_density, density_init_list, **kwargs)\u001b[0m\n\u001b[1;32m    847\u001b[0m                 \u001b[0mn_childs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    848\u001b[0m                 node_childs = [\n\u001b[0;32m--> 849\u001b[0;31m                     NodeCluster(name = prev.name +'_'+level_str+str(level)+'_'+node_str+str(i),\n\u001b[0m\u001b[1;32m    850\u001b[0m                                 parent=prev) for i in  range(n_childs)\n\u001b[1;32m    851\u001b[0m                             ]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
     }
    ],
    "source": [
-    "1+1"
+    "Hier_geo_clus= TreeClusters(3)\n",
+    "Hier_geo_clus.populate_tree(number_per_cluster=200)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "tree_original= tree_clusters(4)\n",
+    "tree_original.populate_tree(number_per_cluster=500)\n",
+    "tree_original_points= tree_original.get_points_tree()\n",
+    "X_2=np.array([[p.x,p.y] for p in tree_original_points])\n",
+    "dic_points={'points':[X_2], 'parent':''}"
+   ]
   }
  ],
  "metadata": {
