--- a/src/00_TreeClusters.ipynb
+++ b/src/00_TreeClusters.ipynb
@@ -25,7 +25,9 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from nbdev.showdoc import *"
+    "from nbdev.showdoc import *\n",
+    "import warnings\n",
+    "warnings.simplefilter('ignore')"
    ]
   },
   {
@@ -39,6 +41,8 @@
     "from sklearn import cluster, datasets\n",
     "import anytree\n",
     "import random\n",
+    "import numpy as np\n",
+    "import shapely\n",
     "from shapely.geometry import LineString\n",
     "from shapely.ops import polygonize, cascaded_union\n",
     "from shapely.geometry import box\n",
@@ -51,6 +55,99 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def inside_polygon(list_points, poligon_check, min_percent):\n",
+    "    \"\"\"\n",
+    "    Help function to validate the number of points that are inside the polygon \n",
+    "    \n",
+    "    :param list list_points: List of points to concider \n",
+    "    \n",
+    "    :param shapely.geometry.Polygon poligon_check:   \n",
+    "    \n",
+    "    :param min_percent: Minimun percent of point to be consider inside \n",
+    "    \n",
+    "    :returns tuple: (bool, list of point inside).   \n",
+    "    \"\"\"\n",
+    "    if len(list_points)< 2:\n",
+    "        return False\n",
+    "    inside = [i for i in list_points if poligon_check.contains(i) ]\n",
+    "    #print(len(inside))\n",
+    "    if len(inside) > int(min_percent*len(list_points)):\n",
+    "        \n",
+    "        return True , list_points\n",
+    "    else: \n",
+    "        \n",
+    "        return False , inside"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def poligon_non_convex_from_Points( points_li ):\n",
+    "    \"\"\"\n",
+    "    Create a random (no convex) poligon from the points\n",
+    "    The algorithm returns a polygon creatated from the points, the \n",
+    "    non convex part it is not always guaranteed.\n",
+    "    \n",
+    "    :param list points_li: list of shapely.geometry.Point \n",
+    "    \n",
+    "    :returns shapely.grometry.Polygon: The polygon created \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    triangles = shapely.ops.triangulate(shapely.geometry.Polygon(points_li))\n",
+    "    Pol = shapely.geometry.Polygon(points_li).convex_hull\n",
+    "    remove_triangles = []\n",
+    "    keep_triangles = []\n",
+    "    for i in triangles:\n",
+    "        inter = Pol.exterior.intersection(i)\n",
+    "        if type(inter) == shapely.geometry.linestring.LineString and inter.length != 0.0:\n",
+    "            remove_triangles.append(i)\n",
+    "        else:\n",
+    "            keep_triangles.append(i)\n",
+    "    return shapely.ops.cascaded_union(keep_triangles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export \n",
+    "def poligon_non_convex_random_gen(npoints):\n",
+    "    \"\"\"\n",
+    "    Create a random (no convex) poligon from n points\n",
+    "    The algorithm returns a polygon creatated from n random 2d points the \n",
+    "    non convex part it is not always guaranteed.\n",
+    "    \n",
+    "    :param int npoints: Number of point to generate the polygon \n",
+    "    \n",
+    "    :returns shapely.grometry.Polygon: The poligon created\n",
+    "    \"\"\"\n",
+    "    points_r = np.random.random((npoints, 2))\n",
+    "    triangles = shapely.ops.triangulate(shapely.geometry.Polygon(points_r))\n",
+    "    Pol = shapely.geometry.Polygon(points_r).convex_hull\n",
+    "    remove_triangles = []\n",
+    "    keep_triangles = []\n",
+    "    for i in triangles:\n",
+    "        inter = Pol.exterior.intersection(i)\n",
+    "        if type(inter) == shapely.geometry.linestring.LineString and inter.length != 0.0:\n",
+    "            remove_triangles.append(i)\n",
+    "        else:\n",
+    "            keep_triangles.append(i)\n",
+    "    return shapely.ops.cascaded_union(keep_triangles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,23 +959,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.NodeCluster at 0x7fb8e4d33e90>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#hide\n",
-    "NodeCluster(name='')"
+    "node=NodeCluster(name='Root')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node.populate_cluster(20)"
    ]
   },
   {
@@ -901,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1740,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1871,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2033,38 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def inside_polygon(list_points, poligon_check, min_percent):\n",
-    "    \"\"\"\n",
-    "    Help function to validate the number of points that are inside the polygon \n",
-    "    \n",
-    "    :param list list_points: List of points to concider \n",
-    "    \n",
-    "    :param shapely.geometry.Polygon poligon_check:   \n",
-    "    \n",
-    "    :param min_percent: Minimun percent of point to be consider inside \n",
-    "    \n",
-    "    :returns tuple: (bool, list of point inside).   \n",
-    "    \"\"\"\n",
-    "    if len(list_points)< 2:\n",
-    "        return False\n",
-    "    inside = [i for i in list_points if poligon_check.contains(i) ]\n",
-    "    #print(len(inside))\n",
-    "    if len(inside) > int(min_percent*len(list_points)):\n",
-    "        \n",
-    "        return True , list_points\n",
-    "    else: \n",
-    "        \n",
-    "        return False , inside"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2098,38 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def poligon_non_convex_from_Points( points_li ):\n",
-    "    \"\"\"\n",
-    "    Create a random (no convex) poligon from the points\n",
-    "    The algorithm returns a polygon creatated from the points, the \n",
-    "    non convex part it is not always guaranteed.\n",
-    "    \n",
-    "    :param list points_li: list of shapely.geometry.Point \n",
-    "    \n",
-    "    :returns shapely.grometry.Polygon: The polygon created \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    triangles = shapely.ops.triangulate(shapely.geometry.Polygon(points_li))\n",
-    "    Pol = shapely.geometry.Polygon(points_li).convex_hull\n",
-    "    remove_triangles = []\n",
-    "    keep_triangles = []\n",
-    "    for i in triangles:\n",
-    "        inter = Pol.exterior.intersection(i)\n",
-    "        if type(inter) == shapely.geometry.linestring.LineString and inter.length != 0.0:\n",
-    "            remove_triangles.append(i)\n",
-    "        else:\n",
-    "            keep_triangles.append(i)\n",
-    "    return shapely.ops.cascaded_union(keep_triangles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2161,38 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export \n",
-    "def poligon_non_convex_random_gen(npoints):\n",
-    "    \"\"\"\n",
-    "    Create a random (no convex) poligon from n points\n",
-    "    The algorithm returns a polygon creatated from n random 2d points the \n",
-    "    non convex part it is not always guaranteed.\n",
-    "    \n",
-    "    :param int npoints: Number of point to generate the polygon \n",
-    "    \n",
-    "    :returns shapely.grometry.Polygon: The poligon created\n",
-    "    \"\"\"\n",
-    "    points_r = np.random.random((npoints, 2))\n",
-    "    triangles = shapely.ops.triangulate(shapely.geometry.Polygon(points_r))\n",
-    "    Pol = shapely.geometry.Polygon(points_r).convex_hull\n",
-    "    remove_triangles = []\n",
-    "    keep_triangles = []\n",
-    "    for i in triangles:\n",
-    "        inter = Pol.exterior.intersection(i)\n",
-    "        if type(inter) == shapely.geometry.linestring.LineString and inter.length != 0.0:\n",
-    "            remove_triangles.append(i)\n",
-    "        else:\n",
-    "            keep_triangles.append(i)\n",
-    "    return shapely.ops.cascaded_union(keep_triangles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
